<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Swole AI</string>
    <string name="app_name_accent">AI</string>

    <string name="app_onboarding_greeting_description_text" tools:ignore="Typos">So you wanna get swole? I\'m here to help.\nI\'ll just need to ask you a few questions about yourself so I can get started.</string>
    <string name="app_onboarding_greeting_title_text">Hi there</string>
    <string name="app_onboarding_greeting_continue_button_text">Let\'s get Swole</string>
    <string name="app_onboarding_username_title_text">What\'s your name brah?</string>
    <string name="app_onboarding_username_continue_button_text">Next</string>
    <string name="app_onboarding_username_field_hint">Username</string>

    <string name="app_field_validator_not_blank_error">Must not be blank</string>
    <string name="app_field_validator_not_number_error">Must be a number</string>

    <string name="app_home_navigation_item_dashboard">Dashboard</string>
    <string name="app_home_navigation_item_session">Session</string>

    <string name="app_toolbar_back_button_description">Back button</string>

    <string name="app_home_session_cancel_button_text">Cancel session</string>
    <string name="app_home_session_finish_button_text">Finish session</string>

    <string name="app_adapter_view_session_is_complete_icon_content_description">Is complete</string>
    <string name="app_adapter_view_session_access_icon_content_description">Access session</string>

    <string name="app_block_type_hypertrophy">Hypertrophy</string>
    <string name="app_block_type_strength">Strength</string>
    <string name="app_block_type_peaking">Peaking</string>

    <string name="app_home_dashboard_fatigue_rating_title">Fatigue rating</string>
    <string name="app_home_dashboard_program_summary_chart_legend_hypertrophy">@string/app_block_type_hypertrophy</string>
    <string name="app_home_dashboard_program_summary_chart_legend_strength">@string/app_block_type_strength</string>
    <string name="app_home_dashboard_program_summary_chart_legend_peaking">@string/app_block_type_peaking</string>
    <string name="app_home_dashboard_program_summary_chart_legend_intensity">Intensity</string>
    <string name="app_home_dashboard_week_summary_previous_week_button_content_description">Previous week</string>
    <string name="app_home_dashboard_week_summary_next_week_button_content_description">Next week</string>
    <string name="app_home_dashboard_week_summary_week_completed_icon_content_description">Week completed</string>
    <string name="app_home_dashboard_week_summary_session_active_text">%1$s - Active</string>
    <string name="app_home_dashboard_week_summary_session_skipped_text">%1$s - Skipped</string>
    <string name="app_home_dashboard_week_summary_complete_week_button_text_completed">Week completed</string>
    <string name="app_home_dashboard_week_summary_complete_week_button_text_incomplete">Complete week</string>
    <string name="app_home_dashboard_program_summary_review_program_button_text">Review program</string>

    <string name="app_settings_option_delete_user_text">Delete user</string>
    <string name="app_settings_option_dark_mode_text">Dark mode</string>
    <string name="app_home_settings_title_text">Settings</string>
    <string name="app_home_settings_app_version_text">App version: %1$s</string>
    <string name="app_home_settings_delete_account_success_text">Account deleted successfully</string>

    <string name="app_home_session_summary_start_button_text_active">Resume session</string>
    <string name="app_home_session_summary_start_button_text_skipped">Restart session</string>
    <string name="app_home_session_summary_start_button_text_completed">Restart session</string>
    <string name="app_home_session_summary_start_button_text_default">Start session</string>
    <string name="app_home_session_summary_go_to_active_session_button_text">To Active</string>
    <string name="app_home_session_summary_skip_button_text">Skip session</string>
    <string name="app_home_session_summary_preview_button_text">Preview session</string>
    <string name="app_home_session_summary_preview_button_text_completed">Review session</string>
    <string name="app_home_session_summary_overview_text">Session details</string>
    <string name="app_home_session_summary_toolbar_text">Session summary</string>
    <string name="app_adapter_view_exercise_summary_swap_icon">Swap</string>
    <string name="app_adapter_view_exercise_summary_info_icon">Info</string>

    <string name="app_onboarding_stats_height_text">Height</string>
    <string name="app_onboarding_stats_gender_male_text">Male</string>
    <string name="app_onboarding_stats_gender_female_text">Female</string>
    <string name="app_onboarding_stats_gender_male_content_description">Male</string>
    <string name="app_onboarding_stats_gender_female_content_description">Female</string>
    <string name="app_onboarding_stats_title_text">How \'bout your stats?</string>
    <string name="app_onboarding_stats_weight_text">Weight</string>
    <string name="app_onboarding_stats_continue_button_text">Next</string>
    <string name="app_onboarding_stats_weight_value">%1$skg</string>
    <string name="app_onboarding_stats_height_value">%1$scm</string>
    <string name="app_onboarding_stats_previous_height_content_description">Previous height</string>
    <string name="app_onboarding_stats_next_height_content_description">Next height</string>
    <string name="app_onboarding_stats_previous_weight_content_description">Previous weight</string>
    <string name="app_onboarding_stats_next_weight_content_description">Next weight</string>

    <string name="app_dialog_restart_session_title_text_completed">You already smashed that workout</string>
    <string name="app_dialog_restart_session_description_text_completed">You sure you want to do it again bro? Who hurt you?</string>
    <string name="app_dialog_restart_session_confirm_button_text_completed">No pain no gain</string>
    <string name="app_dialog_restart_session_cancel_button_text_completed">No, I\'m good</string>
    <string name="app_dialog_restart_session_title_text_skipped">You already skipped that workout</string>
    <string name="app_dialog_restart_session_description_text_skipped">Did you finally grow a pair? Let\'s get it done king!</string>
    <string name="app_dialog_restart_session_confirm_button_text_skipped">No pain no gain</string>
    <string name="app_dialog_restart_session_cancel_button_text_skipped">No, I\'m still a pussy</string>
    <string name="app_dialog_restart_session_title_text_active">A session is already active</string>
    <string name="app_dialog_restart_session_description_text_active">You\'re trying to skip leg day aren\'t you?</string>
    <string name="app_dialog_restart_session_confirm_button_text_active">Cancel the session</string>
    <string name="app_dialog_restart_session_cancel_button_text_active">Let me finish it first</string>

    <string name="app_dialog_choose_exercise_title_text">Choose an exercise</string>

    <string name="app_session_status_active">Active</string>
    <string name="app_session_status_skipped">Skipped</string>
    <string name="app_session_status_completed">Completed</string>
    <string name="app_session_day_name">Day %1$s</string>

    <plurals name="app_home_dashboard_program_summary_days_remaining_text">
        <item quantity="one">Hi %1$s,\nYou are %2$s Day out</item>
        <item quantity="other">Hi %1$s,\nYou are %2$s Days out</item>
    </plurals>
</resources>