<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loader"
        style="@style/LoaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/marginLoader"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/topImageContainer"
                android:layout_width="@dimen/sizeOnboardingIcon"
                android:layout_height="@dimen/sizeOnboardingIcon"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTopOnboardingIcon"
                android:background="@drawable/background_icon_round"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/topImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:src="@drawable/icon_person"
                    app:tint="@color/iconTint" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="@string/app_onboarding_username_title_text"
                android:textAlignment="center"
                android:textFontWeight="600"
                android:textSize="@dimen/textParagraphTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topImageContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/TextInputLayoutAppearanceRound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginRegular"
                android:hint="@string/app_onboarding_username_field_hint"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSend"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.afollestad.viewpagerdots.DotsIndicator
                android:id="@+id/viewPagerDots"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginTop="@dimen/marginRegular"
                android:layout_marginBottom="@dimen/marginRegular"
                app:dot_drawable="@drawable/onboarding_viewpager_indicator_selected"
                app:dot_drawable_unselected="@drawable/onboarding_viewpager_indicator_unselected"
                app:layout_constraintBottom_toTopOf="@id/continueButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout"
                app:layout_constraintVertical_bias="1" />

            <com.guillaumewilmot.swoleai.view.AnimatedButton
                android:id="@+id/continueButton"
                style="@style/ButtonMainStyle"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/marginRegular"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/app_onboarding_username_continue_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>